--- a/pom.xml
+++ b/pom.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="https://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.5</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>3.2.0</version>
+		<relativePath />
 	</parent>
 	<groupId>com.javaeg.micrometer.observability</groupId>
-	<artifactId>micrometer-observability</artifactId>
-	<name>micrometer-observability</name>
-	<description>Demo project for Spring Boot Micrometer-Observability</description>
+	<artifactId>observability-with-micrometer-and-zipkin</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>observability-with-micrometer-and-zipkin</name>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<packaging>pom</packaging>
-	<modules>
-		<module>../order-service</module>
-		<module>../payment-service</module>
-	</modules>
-	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -75,4 +72,8 @@
 			</plugin>
 		</plugins>
 	</build>
+	<modules>
+		<module>order-service</module>
+		<module>payment-service</module>
+	</modules>
 </project>
